	- Fixed #292: Feature - Layout color chooser
	- Fixed #294: Defect - Notice: Undefined index: user_id...
	- Fixed #297: Defect - Wrong data type in PerlLib/Addons/awstats.pm line 196
	- Fixed #298: Defect - Configuration variable `CLIENT_TEMPLATE_PATH` is missing.
	- Fixed #299: Defect - Error while installing apache itk
	- Fixed #300: Defect - Can't locate Servers/ftpd/proftpd/uninstaller.pm

-------------------------------------------------------------------------------------
i-MSCP 1.0.1.5 (beta 5)
-------------------------------------------------------------------------------------
2011-10-25: Torsten Widmann
	- RELEASE i-MSCP 1.0.1.5 (Beta 5)

Features / Enhancements:

	ENGINE:
		Core:
			- Added PHP directives editor
			- Added support for Dovecot
			- Added IPv6 support
			- Engine rewrite including the following new features:
				- Ability to turn off one or many services/servers such as Apache,
				  Bind9, Postfix...
				- Ability to setup DNS service (Bind9) as Master or Slave server
				- New logger (one file per operation)
				- php.ini per user account (default), or per domain entity (vhost)
	GUI:
		Core:
			- Added IPv6 support
			- Added PHP directives editor
		Javascript:
			- Updated jQuery to version 1.6.4
			- Updated jQuery UI to version 1.8.16
		Tools:
			- Updated PhpMyAdmin to version 3.4.7
			- Updated Squirrelmail to version 1.4.22
	SETUP:
		- Added Auto-installer (including both tree builder and setup based on Dialog)

Tickets:
	- Fixed #15:  Feature - PHP directives editor
	- Fixed #16:  Feature - Mail Quota Support
	- Fixed #57:  Enhancement - Adapt the postfix master.cf to be compatible with dovecot
	- Fixed #58:  Enhancement - Default mail quota should be increased up to 100MB
	- Fixed #77:  Task - Setup - Empty files must be removed
	- Fixed #79:  Feature - Support for IPv6
	- Fixed #94:  Enhancement in imscp-vrl-traff
	- Fixed #111: Feature - Add multiple secondary DNS server-wide